--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./node_modules/.bin/functions-framework --target=handler --signature-type=http",
     "lint": "eslint *.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "busboy": "^0.3.1",
-    "nodemailer": "^6.6.1"
+    "@google-cloud/functions-framework": "^3.1.2",
+    "busboy": "^1.6.0",
+    "nodemailer": "^6.7.8",
+    "nodemon": "^2.0.20"
   },
   "devDependencies": {
-    "eslint": "^6.8.0"
+    "eslint": "^8.23.1"
   }
 }
